--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://apis.google.com"
         <title>MARIE.js | Home</title>
         
         <script src="js/marie.min.js" type="text/javascript"></script>
